--- a/tests/mancala.html
+++ b/tests/mancala.html
@@ -3,7 +3,7 @@
 <html><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" type="text/css" href="mancala.css"/>
-	<script src="../node_modules/requirejs/require.js"  data-main="require-config"></script>
+	<script src="../node_modules/requirejs/require.js"></script>
 </head><body>
 	<header>
 		<h1>Mancala</h1>
